--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Assignment 1</title>
-    <script src="./practice.js"></script>
+
 </head>
 <body>
-    Javascript Assignment 1
+    <h3>Javascript Assignment 1 & 2 </h3>
+    <script src="./practice.js"></script>
 </body>
 </html>
